login and registration page , firebase added

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
 VITE_API_URL = http://localhost:5000
+
+
+# firebase config
+ Vite_apiKey= AIzaSyBa5ZCVyrQtL5dFmBhy6lnYenGJgXQOEDA
+  Vite_authDomain= amarshohor-ph-a11.firebaseapp.com
+  Vite_projectId= amarshohor-ph-a11
+  Vite_storageBucket= amarshohor-ph-a11.firebasestorage.app
+  Vite_messagingSenderId= 57881373546
+  Vite_appId= 1:57881373546:web:8e7aec63e4f4d083049313
+  Vite_measurementId= G-LBN2WFZS8P
