firebase login impremented

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ VITE_API_URL = http://localhost:5000
 
 
 # firebase config
- Vite_apiKey= AIzaSyBa5ZCVyrQtL5dFmBhy6lnYenGJgXQOEDA
-  Vite_authDomain= amarshohor-ph-a11.firebaseapp.com
-  Vite_projectId= amarshohor-ph-a11
-  Vite_storageBucket= amarshohor-ph-a11.firebasestorage.app
-  Vite_messagingSenderId= 57881373546
-  Vite_appId= 1:57881373546:web:8e7aec63e4f4d083049313
-  Vite_measurementId= G-LBN2WFZS8P
+VITE_API_KEY=AIzaSyBa5ZCVyrQtL5dFmBhy6lnYenGJgXQOEDA
+VITE_AUTH_DOMAIN=amarshohor-ph-a11.firebaseapp.com
+VITE_PROJECT_ID=amarshohor-ph-a11
+VITE_STORAGE_BUCKET=amarshohor-ph-a11.firebasestorage.app
+VITE_MESSAGING_SENDER_ID=57881373546
+VITE_APP_ID=1:57881373546:web:8e7aec63e4f4d083049313
+VITE_MEASUREMENT_ID=G-LBN2WFZS8P
