imgBB api added

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ VITE_STORAGE_BUCKET=amarshohor-ph-a11.firebasestorage.app
 VITE_MESSAGING_SENDER_ID=57881373546
 VITE_APP_ID=1:57881373546:web:8e7aec63e4f4d083049313
 VITE_MEASUREMENT_ID=G-LBN2WFZS8P
+
+# imgBB config
+VITE_IMGBB_API_KEY=541e0e0c278ce66690adc13de6b3f033
